--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           繪製形狀三大 Helper Functions
         </h2>
         <div
-          class="flex-wrap text-center top-25 w-100 d-flex justify-content-around position-absolute"
+          class="flex-wrap text-center top-20 w-100 d-flex justify-content-around position-absolute"
         >
           <div class="p-3 col-lg-4 col-md-4 col-sm-12">
             <p class="text-center">Generator</p>
@@ -181,7 +181,7 @@
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="text-center">Component</p>
-            <a href="./8.helper-function.html">
+            <a href="./13.helper-function-components.html">
               <img
                 class="w-100"
                 src="./img/geometry_shapes_black_and_white.jpg"
@@ -190,7 +190,7 @@
           </div>
           <div class="p-3 col-md-4 col-12">
             <p class="text-center">Layout</p>
-            <a href="./8.helper-function.html">
+            <a href="./14.helper-function-layouts.html">
               <img
                 class="w-100"
                 src="./img/geometry_shapes_black_and_white.jpg"
@@ -254,7 +254,7 @@
           動畫與互動效果
         </h2>
         <div
-          class="flex-wrap text-center top-25 w-100 d-flex justify-content-around"
+          class="flex-wrap text-center top-20 w-100 d-flex justify-content-around"
         >
           <div class="p-3 col-lg-4 col-md-4 col-sm-12">
             <p class="text-center">transition</p>
