index: import-data

--- a/index.html
+++ b/index.html
@@ -100,30 +100,27 @@
 
       <!-- 匯入檔案 -->
       <section class="container pt-5">
-        <h2 class="text-center text-darkOrange mb-5 fw-bold">
+        <h2 class="text-center text-darkOrange mb-4 fw-bold">
           匯入不同格式的檔案
         </h2>
-        <div class="flex-wrap d-flex justify-content-between">
-          <div class="p-2 col-md-3 col-sm-6 col-12">
-            <p class="text-center">JSON</p>
-          </div>
-          <div class="p-2 col-md-3 col-sm-6 col-12">
-            <p class="text-center">csv/tsv/dsv</p>
-          </div>
-          <div class="p-2 col-md-3 col-sm-6 col-12">
-            <p class="text-center">blob</p>
-          </div>
-          <div class="p-2 col-md-3 col-sm-6 col-12">
-            <p class="text-center">xml</p>
+        <div class="flex-wrap d-flex px-5">
+          <a
+            href="./7.import-data-apis.html"
+            class="text-center p-2 col-6 dark-link"
+          >
+            <img class="rounded w-100" src="./img/import-data.jpg" />
+          </a>
+          <div class="p-2 col-6">
+            <p class="">JSON</p>
+            <p class="">csv/tsv/dsv</p>
+            <p class="">blob</p>
+            <p class="">xml</p>
           </div>
         </div>
-        <a href="./8.helper-function.html">
-          <img class="w-50" src="./img/geometry_shapes_black_and_white.jpg" />
-        </a>
       </section>
 
       <!-- 整理資料的 APIs -->
-      <section class="container pt-5 z-5 position-relative">
+      <section class="container pt-4 z-5 position-relative">
         <div
           class="flex-wrap h-100 text-center py-3 w-100 d-md-flex justify-content-around align-items-start"
         >
