index-scale-axis

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <p class="bg-white z-0 position-absolute bubble-lg"></p>
         <p class="bg-white bubble-md"></p>
         <p class="bubble-sm"></p>
-        <h2 class="text-center text-darkOrange w-100 fw-bold position-absolute">
+        <h2 class="text-center pt-3 text-darkOrange w-100 fw-bold position-absolute">
           繪製形狀三大 Helper Functions
         </h2>
         <div
@@ -204,19 +204,32 @@
         >
           <div class="mb-3 col-12">
             <h2 class="text-darkOrange fw-bold">比例尺與軸線</h2>
+            
           </div>
           <div class="p-3 col-md-6 col-sm-12">
             <p class="text-center">比例尺</p>
+            <a href="">
+              <img
+                class="w-100"
+                src="./img/scale.png"
+              />
+            </a>
           </div>
           <div class="p-3 col-md-6 col-sm-12">
             <p class="text-center">軸線與刻度</p>
+            <a href="">
+              <img
+                class="w-50"
+                src="./img/xy-axis.png"
+              />
+            </a>
           </div>
         </div>
       </section>
 
       <!-- 基礎圖表 -->
       <section class="container pt-5">
-        <h2 class="text-center text-darkOrange mb-5 fw-bold">基礎圖表</h2>
+        <h2 class="text-center text-darkOrange mb-4 fw-bold">基礎圖表</h2>
         <div class="flex-wrap d-flex justify-content-center">
           <div class="text-center mb-5 col-12 col-sm-8 col-md-6 col-lg-4">
             <p>line chart</p>
