--- a/7.import-data-apis.html
+++ b/7.import-data-apis.html
@@ -13,6 +13,15 @@
     />
     <link rel="stylesheet" href="./extension/prism.css" />
     <link rel="stylesheet" href="./css/utils.css" />
+    <style>
+      pre.language-js.line-numbers {
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
+      }
+    </style>
   </head>
   <body>
     <nav class="bg-orange navbar">
